@@ -68,6 +68,9 @@ Changes for v2.00
 - Fix bug to allow entry of Hex data in Key Move Dialog (Graham)
 - When decoding an E2image, don't associate keymoves to a device upgrade when the key is in the button map. (Greg)
 -- Preview 8 --
+- Check EEPROM size against RDF when importing .ir file (Graham)
+- Use Fixed Data as a matching criterion when downloading or importing a .ir file (Graham)
+- Ask whether to replace fixed data when there is a mismatch with RDF (Graham) 
 
 Changes for v1.99b
 - Add support for warnings etc. below table without hiding the buttons, move device upgrade bug warning back down (Graham)
